Adding jacoco tests for supporting non-nested field types with UnnestOperator.
Signed-off-by: forestmvey <forestv@bitquilltech.com>